--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
                     <a id="image-download" class="button-85" download="generated_image.jpg" style="margin-right: 10px;">Download Generated Image</a>
                     <br><br>
                     <button id="depth-button" class="button-85" style="margin-right: 10px;">View Depth Map</button>
-                    <a id="point-cloud-link" class="button-85" download="point_cloud.ply">Download 3D Model</a>
+                    <a id="obj-file-link" class="button-85" download="3d_model.obj">Download 3D Model</a>
                 </div>
             </div>
         </div>
