--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text to Image</title>
+    <title>Text to 3D model</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <style>
         /* Add border to create a vertical line */
@@ -35,7 +35,7 @@
     <div class="container" style="display: flex;">
         <div class="left-section" style="width: 40%; text-align: center;">
             <!-- Left section content -->
-            <h1>Text to 3D</h1>
+            <h1>Text to 3D Model</h1>
             <label for="input">Create an image from text prompt:</label>
             <br><br>
             <input type="text" id="input">
